# bb-remote-execution

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  go_dependencies.bzl
cmd/bb_noop_worker/: BUILD.bazel  main.go
cmd/bb_runner/: BUILD.bazel  install  main.go  main_nonunix.go  main_unix.go
cmd/bb_runner_installer/: .gitignore  BUILD.bazel  main.go
cmd/bb_scheduler/: BUILD.bazel  build_queue_state_service.go  main.go  stylesheet.css
cmd/bb_virtual_dir/: BUILD.bazel  main.go
cmd/bb_virtual_tmp/: BUILD.bazel  main.go
cmd/bb_worker/: BUILD.bazel  clear_umask_unix.go  clear_umask_windows.go  main.go  main_nonunix.go  main_unix.go  main_windows.go
cmd/fake_python/: BUILD.bazel  main.go
cmd/fake_xcrun/: BUILD.bazel  main.go
internal/mock/: BUILD.bazel
pkg/blobstore/: BUILD.bazel  batched_store_blob_access.go  batched_store_blob_access_test.go  blob_access_mutable_proto_store.go  blob_access_mutable_proto_store_test.go  existence_precondition_blob_access.go  existence_precondition_blob_access_test.go  mutable_proto_store.go  suspending_blob_access.go  suspending_blob_access_test.go
pkg/builder/: BUILD.bazel  build_client.go  build_client_test.go  build_directory.go  build_directory_creator.go  build_executor.go  build_queue_state_provider.go  caching_build_executor.go  caching_build_executor_test.go  clean_build_directory_creator.go  clean_build_directory_creator_test.go  command.go  command_test.go  completed_action_logger.go  completed_action_logger_test.go  completed_action_logging_build_executor.go  completed_action_logging_build_executor_test.go  cost_computing_build_executor.go  cost_computing_build_executor_test.go  file_pool_stats_build_executor.go  file_pool_stats_build_executor_test.go  fuse_build_directory.go  fuse_build_directory_disabled.go  in_memory_build_queue.go  in_memory_build_queue_test.go  input_root_populator.go  invocation_id_extractor.go  local_build_executor.go  local_build_executor_test.go  logging_build_executor.go  metrics_build_executor.go  naive_build_directory.go  naive_build_directory_test.go  naive_input_root_populator.go  naive_input_root_populator_test.go  noop_build_executor.go  noop_build_executor_test.go  output_hierarchy.go  output_hierarchy_test.go  prefetching_build_executor.go  (+17 more)
pkg/cas/: BUILD.bazel  blob_access_content_addressable_storage.go  blob_access_content_addressable_storage_test.go  blob_access_directory_fetcher.go  blob_access_directory_fetcher_test.go  blob_access_file_fetcher.go  caching_directory_fetcher.go  caching_directory_fetcher_test.go  caching_fetcher.go  caching_file_fetcher.go  caching_file_fetcher_test.go  cloning_file_installer.go  configuration.go  content_addressable_storage.go  decomposed_directory_walker.go  decomposed_directory_walker_test.go  directory_caching_content_addressable_storage.go  directory_fetcher.go  directory_walker.go  fetcher.go  file_fetcher.go  file_installer.go  hardlinking_content_addressable_storage.go  hardlinking_file_fetcher.go  hardlinking_file_fetcher_test.go  hardlinking_file_installer.go  link_helper.go  link_helper_clonefile.go  link_helper_hardlink.go  read_write_decoupling_content_addressable_storage.go  suspending_directory_fetcher.go
pkg/cleaner/: BUILD.bazel  chained_cleaner.go  chained_cleaner_test.go  command_running_cleaner.go  command_running_cleaner_test.go  directory_cleaner.go  directory_cleaner_test.go  filtering_process_table.go  filtering_process_table_test.go  idle_invoker.go  idle_invoker_test.go  process_table.go  process_table_cleaner.go  process_table_cleaner_disabled.go  process_table_cleaner_unix.go  system_process_table_darwin.go  system_process_table_disabled.go  system_process_table_linux.go  system_process_table_test.go
pkg/clock/: BUILD.bazel  http_suspender.go  joined_suspendable.go  suspendable.go  suspendable_clock.go  suspendable_clock_test.go
pkg/credentials/: BUILD.bazel  proc_credentials_nonunix.go  proc_credentials_unix.go
pkg/environment/: BUILD.bazel  action_digest_subdirectory_manager.go  action_digest_subdirectory_manager_test.go  clean_build_directory_manager.go  clean_build_directory_manager_test.go  concurrent_manager.go  environment.go  local_execution_environment.go  local_execution_environment_rss_bytes.go  local_execution_environment_rss_kibibytes.go  manager.go  remote_execution_environment.go  runner_server.go  singleton_manager.go  temp_directory_cleaning_manager.go
pkg/filesystem/: BUILD.bazel  bitmap_sector_allocator.go  bitmap_sector_allocator_test.go  block_device_backed_file_pool.go  block_device_backed_file_pool_test.go  configuration.go  directory_backed_file_pool.go  directory_backed_file_pool_test.go  empty_file_pool.go  empty_file_pool_test.go  file_pool.go  in_memory_file_pool.go  in_memory_file_pool_test.go  lazy_directory.go  lazy_directory_test.go  metrics_file_pool.go  quota_enforcing_file_pool.go  quota_enforcing_file_pool_test.go  quota_enforcing_sector_allocator.go  quota_enforcing_sector_allocator_test.go  sector_allocator.go  writable_path_checker.go  writable_path_checker_test.go
pkg/runner/: BUILD.bazel  apple_xcode_resolving_runner.go  apple_xcode_resolving_runner_test.go  clean_runner.go  clean_runner_test.go  local_runner.go  local_runner_darwin.go  local_runner_disabled.go  local_runner_rss_bytes.go  local_runner_rss_kibibytes.go  local_runner_test.go  local_runner_unix.go  local_runner_windows.go  mounting_runner.go  mounting_runner_test.go  path_existence_checking_runner.go  path_existence_checking_runner_test.go  remapping_command_creator.go  remote_runner.go  runner.go  runner_server.go  runner_server_test.go  temporary_directory_cleaning_runner.go  temporary_directory_installing_runner.go  temporary_directory_symlinking_runner.go  temporary_directory_symlinking_runner_test.go  test_environment_variable_setting_runner.go
pkg/scheduler/: BUILD.bazel  in_memory_build_queue.go  in_memory_build_queue_test.go  invocation_id_extractor.go
pkg/sync/: BUILD.bazel  initializer.go  initializer_test.go  lock_pile.go  (+1 more)
tools/: BUILD.bazel  deps.go
(+402 files in other folders)
