module(name = "com_github_buildbarn_bb_remote_execution")

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "aspect_rules_js", version = "2.8.1")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
bazel_dep(name = "com_github_buildbarn_bb_storage")
bazel_dep(name = "com_github_buildbarn_go_xdr")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251104-53af3b72")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_protoc", version = "0.6.0")  # must come BEFORE protobuf so the toolchain registration wins
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_jsonnet", version = "0.7.2")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

git_override(
    module_name = "bazel_remote_apis",
    commit = "b02e15a6d354e2fb553216132ccec79f3f5b39cb",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_storage",
    commit = "797be97c5d2c216dafb4c4345e24003952c71561",
    remote = "https://github.com/buildbarn/bb-storage.git",
)

git_override(
    module_name = "com_github_buildbarn_go_xdr",
    commit = "236788cf9e8948a1e8875c7dd243e2be180cdfd7",
    remote = "https://github.com/buildbarn/go-xdr.git",
)

git_override(
    module_name = "rules_antlr",
    commit = "89a29cca479363a5aee53e203719510bdc6be6ff",
    patches = [
        "//:patches/rules_antlr/antlr-4.10.diff",
        "//:patches/rules_antlr/bzlmod.diff",
    ],
    remote = "https://github.com/marcohu/rules_antlr.git",
)

single_version_override(
    module_name = "gazelle",
    patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
)

single_version_override(
    module_name = "toolchains_llvm",
    patches = ["//:patches/toolchains_llvm/non-root.diff"],
)

# Match protobuf above, until it ships a pre-built binary toolchain itself
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(version = "v33.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_bazelbuild_buildtools",
    "com_github_golang_protobuf",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_hanwen_go_fuse_v2",
    "com_github_kballard_go_shellquote",
    "com_github_prometheus_client_golang",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_winfsp_go_winfsp",
    "com_google_cloud_go_longrunning",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_lint",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_uber_go_mock",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cncf/xds/go",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
    path = "github.com/grpc-ecosystem/go-grpc-prometheus",
)
go_deps_dev.module_override(
    patches = [
        "//:patches/com_github_hanwen_go_fuse_v2/direntrylist-offsets-and-testability.diff",
        "//:patches/com_github_hanwen_go_fuse_v2/writeback-cache.diff",
        "//:patches/com_github_hanwen_go_fuse_v2/notify-testability.diff",
    ],
    path = "github.com/hanwen/go-fuse/v2",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_lint/generic.diff"],
    path = "golang.org/x/lint",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_sys/o-search.diff"],
    path = "golang.org/x/sys",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/cc_mvdan_gofumpt/unused-receiver-idents.diff"],
    path = "mvdan.cc/gofumpt",
)
go_deps_dev.module_override(
    patches = [
        "@com_github_buildbarn_bb_storage//:patches/org_uber_go_mock/generics.diff",
        "@com_github_buildbarn_bb_storage//:patches/org_uber_go_mock/mocks-for-funcs.diff",
    ],
    path = "go.uber.org/mock",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_twbs_bootstrap",
    build_file_content = """exports_files(["css/bootstrap.min.css", "js/bootstrap.min.js"])""",
    sha256 = "395342b2974e3350560e65752d36aab6573652b11cc6cb5ef79a2e5e83ad64b1",
    strip_prefix = "bootstrap-5.1.0-dist",
    urls = ["https://github.com/twbs/bootstrap/releases/download/v5.1.0/bootstrap-5.1.0-dist.zip"],
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "com_github_krallin_tini_tini_static_amd64",
    downloaded_file_path = "tini",
    executable = True,
    sha256 = "c5b0666b4cb676901f90dfcb37106783c5fe2077b04590973b885950611b30ee",
    urls = ["https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-amd64"],
)

http_file(
    name = "com_github_krallin_tini_tini_static_arm64",
    downloaded_file_path = "tini",
    executable = True,
    sha256 = "eae1d3aa50c48fb23b8cbdf4e369d0910dfc538566bfd09df89a774aa84a48b9",
    urls = ["https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-arm64"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "17.0.6",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "com_github_buildbarn_bb_remote_execution_npm",
    link_workspace = "com_github_buildbarn_bb_remote_execution",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "com_github_buildbarn_bb_remote_execution_npm")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "busybox",
    digest = "sha256:97e3873d1f61ba651b632e4755fc52e1d90c9f6e4f01d9b720f37af5efed17e5",  # 1.36.1-uclibc
    image = "docker.io/library/busybox",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "busybox", "busybox_linux_amd64", "busybox_linux_arm64_v8")

http_archive(
    name = "com_github_winfsp_winfsp_tests",
    build_file_content = """
filegroup(
    name = "winfsp_tests_x64",
    srcs = ["winfsp-tests-x64.exe"],
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-DPxoeRcDyA+Wxynr04tjGH3lPhm6ocYDpwWdbqh8X1I=",
    url = "https://github.com/winfsp/winfsp/releases/download/v2.1/winfsp-tests-2.1.25156.zip",
)
