load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "bb_runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cleaner",
        "//pkg/credentials",
        "//pkg/filesystem",
        "//pkg/proto/configuration/bb_runner",
        "//pkg/proto/runner",
        "//pkg/proto/tmp_installer",
        "//pkg/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_runner",
    embed = [":bb_runner_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bb_runner_layer",
    files = [":bb_runner"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tini_layer",
    files = ["@com_github_krallin_tini_tini_static_amd64//file"],
)

pkg_tar(
    name = "install_layer",
    files = ["install"],
)

# TODO: Provide a multi-arch image for bb_runner_installer.
oci_image(
    name = "bb_runner_installer",
    base = "@busybox",
    cmd = ["/bb"],
    entrypoint = ["/install"],
    tars = [
        ":install_layer",
        ":bb_runner_layer",
        ":tini_layer",
    ],
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_runner_bare_container",
    binary = ":bb_runner",
)

container_push_official(
    name = "bb_runner_bare_container_push",
    component = "bb-runner-bare",
    image = ":bb_runner_bare_container",
)

container_push_official(
    name = "bb_runner_installer_container_push",
    component = "bb-runner-installer",
    image = ":bb_runner_installer",
)
