load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cleaner",
        "//pkg/credentials",
        "//pkg/filesystem",
        "//pkg/proto/configuration/bb_runner",
        "//pkg/proto/runner",
        "//pkg/proto/tmp_installer",
        "//pkg/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_runner",
    embed = [":bb_runner_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_runner_bare_container",
    binary = ":bb_runner",
)

container_push_official(
    name = "bb_runner_bare_container_push",
    component = "bb-runner-bare",
    image = ":bb_runner_bare_container",
)
