load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_scheduler_lib",
    srcs = [
        "build_queue_state_service.go",
        "main.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_scheduler",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore",
        "//pkg/builder",
        "//pkg/builder/initialsizeclass",
        "//pkg/cloud/aws",
        "//pkg/proto/buildqueuestate",
        "//pkg/proto/configuration/bb_scheduler",
        "//pkg/proto/remoteworker",
        "//pkg/util",
        "@com_github_aws_aws_sdk_go//service/autoscaling",
        "@com_github_aws_aws_sdk_go//service/sqs",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/cloud/aws",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "bb_scheduler",
    embed = [":bb_scheduler_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_scheduler_container",
    embed = [":bb_scheduler_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_scheduler_container_push",
    component = "bb-scheduler",
    image = ":bb_scheduler_container",
)
